azure_native_networking.tf
# // Enables you to manage Private DNS zones within Azure DNS
# resource "azurerm_private_dns_zone" "default" {
#   name                = "${random_string.name.result}.mysql.database.azure.com"
#   resource_group_name = azurerm_resource_group.default.name
# }

# // Enables you to manage Private DNS zone Virtual Network Links
# resource "azurerm_private_dns_zone_virtual_network_link" "default" {
#   name                  = "mysqlfsVnetZone${random_string.name.result}.com"
#   private_dns_zone_name = azurerm_private_dns_zone.default.name
#   virtual_network_id    = azurerm_virtual_network.default.id
#   resource_group_name   = azurerm_resource_group.default.name
# }

# resource "azurerm_virtual_network" "default" {
#   name                = "wordpress-vnet"
#   address_space       = ["10.0.0.0/16"]
#   location            = var.location
#   resource_group_name = azurerm_resource_group.default.name
#   tags                = var.tags
# }

# resource "azurerm_subnet" "wordpress-gateway" {
#   name                 = "wordpress-gateway-subnet"
#   resource_group_name  = azurerm_resource_group.default.name
#   virtual_network_name = azurerm_virtual_network.default.name
#   address_prefixes     = ["10.0.0.0/24"]
# }

# resource "azurerm_subnet" "lb" {
#   name                 = "lb-subnet"
#   resource_group_name  = azurerm_resource_group.default.name
#   virtual_network_name = azurerm_virtual_network.default.name
#   address_prefixes     = ["10.0.1.0/24"]
# }

# resource "azurerm_subnet" "web" {
#   name                 = "web-subnet"
#   resource_group_name  = azurerm_resource_group.default.name
#   virtual_network_name = azurerm_virtual_network.default.name
#   address_prefixes     = ["10.0.2.0/24"]
# }

# resource "azurerm_subnet" "database" {
#   name                 = "database-subnet"
#   resource_group_name  = azurerm_resource_group.default.name
#   virtual_network_name = azurerm_virtual_network.default.name
#   address_prefixes     = ["10.0.3.0/24"]
#   service_endpoints    = ["Microsoft.Storage"]

#   delegation {
#     name = "fs"

#     service_delegation {
#       name = "Microsoft.DBforMySQL/flexibleServers"

#       actions = [
#         "Microsoft.Network/virtualNetworks/subnets/join/action",
#       ]
#     }
#   }
# }

# # resource "azurerm_virtual_network" "spoke2" {
# #   name                = "spoke2-vnet"
# #   address_space       = ["10.1.0.0/16"]
# #   location            = var.location
# #   resource_group_name = azurerm_resource_group.default.name
# #   tags                = var.tags
# # }
